<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".SuperheroDetailsActivity">

    <!-- Imagen del superhéroe -->
    <ImageView
        android:id="@+id/superhero_detail_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/superhero_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Nombre del superhéroe -->
    <TextView
        android:id="@+id/superhero_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <!-- Alter ego -->
    <TextView
        android:id="@+id/superhero_detail_alter_ego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alter_ego_name"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Encabezado Powers -->
    <TextView
        android:id="@+id/powers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powers"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_alter_ego"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Lista de poderes -->
    <TextView
        android:id="@+id/superhero_detail_powers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/powers_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/power_1_n_power_2_n_power_3" />

    <!-- Encabezado Main Enemy -->
    <TextView
        android:id="@+id/main_enemy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_enemy"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_powers"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Enemigo principal -->
    <TextView
        android:id="@+id/superhero_detail_main_enemy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_enemy_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/enemy_name" />

    <!-- Encabezado Friends -->
    <TextView
        android:id="@+id/friends_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_main_enemy"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Lista de amigos -->
    <TextView
        android:id="@+id/superhero_detail_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/friends_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/friend_1_n_friend_2" />

    <!-- Encabezado Locations -->
    <TextView
        android:id="@+id/locations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locations"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/superhero_detail_friends"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Lista de ubicaciones -->
    <TextView
        android:id="@+id/superhero_detail_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locations_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/location_1_n_location_2" />
</androidx.constraintlayout.widget.ConstraintLayout>